中心更新版本

--- a/链接教程.md
+++ b/链接教程.md
@@ -1,135 +1,265 @@
-## 项目基本信息
+# 游戏陪玩平台管理系统 - 启动指南
 
-### 项目概述
+## 🚀 快速启动
+
+### 1. 启动后端服务器
+```bash
+cd backend/server
+node src/index.js
+```
+**后端服务地址**: http://localhost:3000
+
+### 2. 启动前端服务器
+```bash
+cd frontend
+npx vite --host --port 3004
+```
+**前端服务地址**: http://localhost:3004
+
+## ⚠️ 重要提示
+
+**前端启动问题解决方案**：
+- 如果使用 `npm run dev` 启动失败，请直接使用 `npx vite --host --port 3004` 命令
+- 这是由于 package.json 中的脚本配置问题导致的
+- 直接使用 vite 命令可以绕过这个问题
+
+## 🔔 通知系统修复
+
+已修复通知在不同标签页之间重复显示的问题：
+- 创建了全局通知状态管理器 (`NotificationContext.tsx`)
+- 使用 localStorage 跨标签页共享已显示的通知ID
+- 防止同一通知在多个标签页中重复弹出 toast 提示
+
+## 📋 项目概述
+
 这是一个**游戏陪玩平台管理系统**，包含前端React应用和后端Node.js API服务。
 
+### 🎯 主要功能
+- 👥 用户管理 (用户、陪玩、管理员)
+- 📦 订单管理
+- 🎮 游戏管理  
+- 🎁 礼物系统
+- 💰 提现管理
+- 📊 统计分析
+- 🔔 通知系统
+- 🔐 权限管理
+
+## 🏗️ 项目结构
+
+```
+vue-manage-system-master/
+├── frontend/                    # 前端React应用
+│   ├── src/
+│   │   ├── components/         # 通用组件
+│   │   ├── pages/             # 页面组件
+│   │   ├── services/          # API服务
+│   │   ├── contexts/          # React Context
+│   │   ├── hooks/             # 自定义Hooks
+│   │   ├── types/             # TypeScript类型定义
+│   │   └── config/            # 配置文件
+│   ├── package.json
+│   └── vite.config.ts
+├── backend/
+│   └── server/                 # 后端Node.js服务
+│       ├── src/
+│       │   ├── dao/           # 数据访问层
+│       │   ├── routes/        # 路由定义
+│       │   ├── middleware/    # 中间件
+│       │   └── index.js       # 入口文件
+│       ├── package.json
+│       └── .env               # 环境变量
+└── sql/                       # 数据库脚本
+    ├── init.sql              # 初始化脚本
+    └── seed_data.sql         # 测试数据
+```
+
+## 🔧 技术栈
+
 ### 前端 (Frontend)
-- **技术栈**: React 18 + TypeScript + Vite
+- **框架**: React 18 + TypeScript
+- **构建工具**: Vite
 - **UI框架**: Tailwind CSS
 - **路由**: React Router DOM v7
 - **状态管理**: React Context (AuthContext)
 - **图表库**: Recharts
 - **通知**: Sonner
 - **表单**: React Hook Form + Zod
-- **构建工具**: Vite
-- **端口**: 3000 (开发环境)
-
-**主要功能模块**:
-- 用户管理 (用户、陪玩、管理员)
-- 订单管理
-- 游戏管理
-- 礼物系统
-- 提现管理
-- 统计分析
-- 通知系统
-- 权限管理
+- **端口**: 3004
 
 ### 后端 (Backend)
-- **技术栈**: Node.js + Express + TypeScript
+- **运行时**: Node.js + Express
+- **语言**: TypeScript (编译为JavaScript)
 - **数据库**: MySQL 8.0
-- **ORM**: mysql2 (原生SQL)
+- **数据库驱动**: mysql2 (原生SQL)
 - **认证**: JWT + bcrypt
 - **文件上传**: multer
 - **跨域**: CORS
 - **环境配置**: dotenv
-- **开发工具**: ts-node-dev
-- **端口**: 3000 (默认) 或环境变量 PORT
+- **端口**: 3000
 
-**数据库表结构**:
-- `users` - 用户表
-- `players` - 陪玩表
-- `managers` - 管理员表
-- `games` - 游戏表
-- `orders` - 订单表
-- `comments` - 评论表
-- `gifts` - 礼物表
-- `gift_records` - 礼物记录表
-- `services` - 服务表
-- `withdrawals` - 提现表
-- `statistics` - 统计表
+## 🗄️ 数据库表结构
 
-## 前后端连接方式
+| 表名 | 说明 |
+|------|------|
+| `users` | 用户表 |
+| `players` | 陪玩表 |
+| `managers` | 管理员表 |
+| `games` | 游戏表 |
+| `orders` | 订单表 |
+| `comments` | 评论表 |
+| `gifts` | 礼物表 |
+| `gift_records` | 礼物记录表 |
+| `services` | 服务表 |
+| `withdrawals` | 提现表 |
+| `statistics` | 统计表 |
 
-### 1. API配置
-前端通过以下配置连接后端：
+## 🔗 前后端连接配置
 
-**前端API配置** (<mcfile name="api.ts" path="d:\项目文件\vue-manage-system-master\frontend\src\config\api.ts"></mcfile>):
-```typescript
-export const API_BASE_URL = process.env.NODE_ENV === 'development' 
-  ? 'http://localhost:8080/api'  // 开发环境
-  : '/api';                      // 生产环境
-```
+### 当前配置状态 ✅
+- **前端**: http://localhost:3004
+- **后端**: http://localhost:3000
+- **API基础URL**: http://localhost:3000/api
 
-**前端服务配置** (<mcfile name="api.ts" path="d:\项目文件\vue-manage-system-master\frontend\src\services\api.ts"></mcfile>):
-```typescript
-const API_BASE_URL = import.meta.env.VITE_API_URL || 'https://api.example.com/api';
-```
+### 环境变量配置
 
-### 2. 环境变量配置
-
-**后端环境变量** (<mcfile name=".env" path="d:\项目文件\vue-manage-system-master\backend\server\.env"></mcfile>):
-```
+**后端 (.env)**:
+```env
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASS=123456
+DB_PASS=YHZ@yhz050401
 DB_NAME=author_center
-JWT_SECRET=your_jwt_secret_key_here
+JWT_SECRET=751095938002a405d4d1c03c80238d1aa49ad9b798dfc2f0a6ff1cd5d88d02d2
 ```
 
-### 3. 启动方式
-
-**后端启动**:
-```bash
-cd backend/server
-npm install
-npm run dev  # 启动在端口3000
-```
-
-**前端启动**:
-```bash
-cd frontend
-pnpm install
-pnpm dev     # 启动在端口3000
-```
-
-### 4. 连接配置问题
-
-⚠️ **当前配置存在端口冲突**:
-- 前端配置期望后端在 `localhost:8080`
-- 但后端实际运行在端口 `3000`
-
-## 如何正确连接前后端
-
-### 方案1: 修改后端端口 (推荐)
-在后端 <mcfile name=".env" path="d:\项目文件\vue-manage-system-master\backend\server\.env"></mcfile> 文件中添加:
-```
-PORT=8080
-```
-
-### 方案2: 修改前端配置
-修改前端 <mcfile name="api.ts" path="d:\项目文件\vue-manage-system-master\frontend\src\config\api.ts"></mcfile>:
-```typescript
-export const API_BASE_URL = process.env.NODE_ENV === 'development' 
-  ? 'http://localhost:3000/api'  // 改为3000端口
-  : '/api';
-```
-
-### 方案3: 使用环境变量
-创建前端 `.env` 文件:
-```
+**前端 (.env)**:
+```env
 VITE_API_URL=http://localhost:3000/api
 ```
 
-### 5. 数据库设置
-1. 创建MySQL数据库 `author_center`
-2. 执行初始化SQL: <mcfile name="init.sql" path="d:\项目文件\vue-manage-system-master\backend\sql\init.sql"></mcfile>
-3. 配置数据库连接信息
+### API配置文件
 
-### 6. 认证机制
+**前端API配置** (`frontend/src/config/api.ts`):
+```typescript
+export const API_BASE_URL = process.env.NODE_ENV === 'development' 
+  ? 'http://localhost:3000/api'  // 开发环境
+  : '/api';                      // 生产环境
+```
+
+## 🛠️ 详细启动步骤
+
+### 1. 环境准备
+- Node.js 16+ 
+- MySQL 8.0
+- pnpm (推荐) 或 npm
+
+### 2. 数据库设置
+```sql
+-- 1. 创建数据库
+CREATE DATABASE author_center;
+
+-- 2. 执行初始化脚本
+mysql -u root -p author_center < backend/sql/init.sql
+
+-- 3. 导入测试数据 (可选)
+mysql -u root -p author_center < backend/sql/seed_data.sql
+```
+
+### 3. 后端启动
+```bash
+# 进入后端目录
+cd backend/server
+
+# 安装依赖 (如果还没安装)
+npm install
+
+# 编译TypeScript (如果需要)
+npx tsc
+
+# 启动服务器
+node src/index.js
+```
+
+**启动成功标志**:
+```
+✅ 路由 userRouter 已正确导入
+✅ 路由 playerRouter 已正确导入
+...
+Server is running at http://localhost:3000
+```
+
+### 4. 前端启动
+```bash
+# 进入前端目录
+cd frontend
+
+# 安装依赖 (如果还没安装)
+npm install
+
+# 启动开发服务器
+npm run dev
+```
+
+**启动成功标志**:
+```
+VITE v6.3.5  ready in 185 ms
+
+➜  Local:   http://localhost:3004/
+➜  Network: http://192.168.10.36:3004/
+```
+
+## 🔐 认证机制
 - 使用JWT token进行身份验证
 - Token存储在localStorage中
 - 每个API请求自动添加Authorization头
+- 支持三种用户类型：用户、陪玩、管理员
 
-这样配置后，前后端就能正常通信了。建议使用方案1，让后端运行在8080端口，这样与前端的默认配置保持一致。
+## 📱 主要页面路由
+
+### 用户端
+- `/` - 陪玩大厅
+- `/user/home` - 用户主页
+- `/user/orders` - 我的订单
+- `/user/favorites` - 我的收藏
+
+### 陪玩端  
+- `/player/profile` - 陪玩资料
+- `/player/orders` - 接单管理
+- `/player/funds` - 资金管理
+
+### 管理端
+- `/admin/dashboard` - 管理仪表板
+- `/admin/users` - 用户管理
+- `/admin/players` - 陪玩管理
+- `/admin/orders` - 订单管理
+
+## 🐛 常见问题
+
+### 1. 端口冲突
+如果端口被占用，可以修改启动命令：
+```bash
+# 后端使用其他端口
+PORT=3001 node src/index.js
+
+# 前端使用其他端口  
+npm run dev -- --port 3005
+```
+
+### 2. 数据库连接失败
+检查 `.env` 文件中的数据库配置是否正确，确保MySQL服务已启动。
+
+### 3. API请求失败
+确认前后端都已正常启动，检查控制台是否有CORS错误。
+
+## 🎉 测试链接
+
+启动成功后，可以访问以下链接进行测试：
+
+- **前端应用**: http://localhost:3004
+- **后端API**: http://localhost:3000/api
+- **API健康检查**: http://localhost:3000/api/health (如果有)
+
+---
+
+**最后更新**: 2024年12月 | **状态**: ✅ 已验证可正常启动
         
