--- a/详细功能测试报告_20241219.md
+++ b/详细功能测试报告_20241219.md
@@ -200,7 +200,7 @@
 - [ ] 用户收藏 (/user/favorites)
 - [ ] 用户个人资料 (/user/profile)
 
-### 🎮 陪玩页面测试 ⏳ 待测试
+### 📱 陪玩页面测试 ⏳ 待测试
 - [ ] 陪玩仪表盘 (/player/dashboard)
 - [ ] 陪玩订单 (/player/orders)
 - [ ] 陪玩个人资料 (/player/profile)
@@ -349,7 +349,7 @@
 | 我的订单 | /user/orders | 🔍 | 🔍 | 订单管理 |
 | 我的收藏 | /user/favorites | 🔍 | 🔍 | 收藏管理 |
 
-### 🎮 陪玩用户页面
+### 📱 陪玩用户页面
 | 页面名称 | 路径 | 显示状态 | 功能完整性 | 备注 |
 |----------|------|----------|------------|------|
 | 陪玩仪表板 | /player/dashboard | 🔍 | 🔍 | 主页面 |
